# trading-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
migrations/: 003_trades.sql  010_trailing_stop.sql
src/trading_agent/: alerts.py  db.py  decision.py  halt.py  main.py  models.py  positions.py  prices.py  settings.py
src/trading_agent/brokers/: __init__.py  alpaca.py  base.py  paper.py
tests/: test_brokers.py  test_decision.py  test_trailing_stop.py
